NEB-147 fix cropped location on homepage

--- a/src/app/v2/screens/main-screen/main-screen.component.scss
+++ b/src/app/v2/screens/main-screen/main-screen.component.scss
@@ -169,7 +169,7 @@ map-component {
   }
 
   app-circle-chart {
-    height: calc(100% - 183px);
+    height: calc(100% - 223px);
     vertical-align: middle;
     display: inline-grid;
     // background-color: red;
